--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <h1>スケア練習道場</h1>
     <div id="countdown">00:00</div>
-    <h2>6月16日〜7月4日のレッスン</h2>
+    <h2>6月16日〜7月4日までのレッスン</h2>
     <div class="lesson-list">
       <div class="lesson-day">6月16日（日）</div>
       <div class="lesson">18:00 Dummy</div>
