--- a/index.html
+++ b/index.html
@@ -5,21 +5,44 @@
   <title>スケア練習道場</title>
   <meta name="robots" content="noindex, nofollow">
   <link rel="stylesheet" href="style.css">
+  <style>
+    .lesson-row {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      background-color: #f0f4f8;
+      padding: 12px 16px;
+      margin-bottom: 8px;
+      border-radius: 6px;
+    }
+    .lesson-row a {
+      color: #007bff;
+      font-weight: bold;
+      text-decoration: none;
+    }
+    .lesson-row:hover {
+      background-color: #dce7f1;
+    }
+    .upcoming { margin-top: 30px; }
+  </style>
 </head>
 <body>
   <div class="container">
     <h1>スケア練習道場</h1>
     <div id="countdown">00:00</div>
-    <h2>6月16日〜7月4日までのレッスン</h2>
+
+    <h2>6月16日〜7月4日のレッスン</h2>
     <div class="lesson-list">
-      <div class="lesson-day">6月16日（日）</div>
-      <div class="lesson">18:00 Dummy</div>
-      <div class="lesson-day">6月17日（月）</div>
-      <div class="lesson">18:00 Dummy</div>
-      <!-- 日付どんどん追加してね -->
+      <div class="lesson-row"><span>6/16（日）18:00</span><span>Dummy</span></div>
+      <div class="lesson-row"><span>6/17（月）18:00</span><span>Dummy</span></div>
+      <div class="lesson-row"><span>6/18（火）18:00</span><span>Dummy</span></div>
+      <!-- 必要に応じて日付追加 -->
     </div>
-    <div id="upcoming"></div>
+
+    <div id="upcoming" class="upcoming"></div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
