--- a/index.html
+++ b/index.html
@@ -29,21 +29,19 @@
       overflow-x: auto;
       background: #fff;
       position: relative;
+      white-space: nowrap;
     }
     .day-rows {
-      display: flex;
-      width: fit-content;
+      display: inline-flex;
     }
     .day-row {
-      display: flex;
+      display: inline-flex;
     }
     .day-column {
       flex: 0 0 auto;
       min-width: 140px;
       border-right: 1px solid #ccc;
-    }
-    .day-column:hover {
-      cursor: grab;
+      display: inline-block;
     }
     .day-header {
       background: #eee;
@@ -67,14 +65,6 @@
       border-left: 6px solid #f60;
       color: #000;
       cursor: pointer;
-    }
-    .lesson-box a {
-      text-decoration: none;
-      color: #000;
-      font-weight: bold;
-      display: block;
-      width: 100%;
-      height: 100%;
     }
     #countdown {
       text-align: center;
@@ -133,7 +123,7 @@
   </div>
   <div id="countdown">00:00</div>
 
-  <div class="scroll-container" id="drag-scroll">
+  <div class="scroll-container">
     <div class="day-rows">
       <div class="day-row" id="fixed-days"></div>
       <div class="day-row" id="dynamic-days" style="display:none"></div>
@@ -151,23 +141,79 @@
   </div>
 
   <script>
-    const drag = document.getElementById("drag-scroll");
-    let isDown = false, startX, scrollLeft;
-    drag.addEventListener("mousedown", (e) => {
-      isDown = true;
-      drag.classList.add("active");
-      startX = e.pageX - drag.offsetLeft;
-      scrollLeft = drag.scrollLeft;
-    });
-    drag.addEventListener("mouseleave", () => { isDown = false; });
-    drag.addEventListener("mouseup", () => { isDown = false; });
-    drag.addEventListener("mousemove", (e) => {
-      if (!isDown) return;
-      e.preventDefault();
-      const x = e.pageX - drag.offsetLeft;
-      const walk = (x - startX) * 2;
-      drag.scrollLeft = scrollLeft - walk;
-    });
+    const countdown = document.getElementById("countdown");
+    const dynamic = document.getElementById("dynamic-days");
+
+    function openModal() {
+      document.getElementById("seatModal").style.display = "flex";
+    }
+    function closeModal() {
+      document.getElementById("seatModal").style.display = "none";
+    }
+    function confirmSeat() {
+      const win = Math.random() < 0.7;
+      alert(win ? "✨ 4番、あなたの席になりました ✨" : "😢 席が埋まっていました。再挑戦を。");
+      closeModal();
+    }
+
+    function createDayColumn(dateStr, lessons = []) {
+      const col = document.createElement("div");
+      col.className = "day-column";
+
+      const head = document.createElement("div");
+      head.className = "day-header";
+      head.textContent = dateStr;
+      col.appendChild(head);
+
+      lessons.forEach(lesson => {
+        const box = document.createElement("div");
+        box.className = lesson.link ? "lesson-box highlight" : "lesson-box";
+        if (lesson.link) {
+          box.onclick = () => openModal();
+        }
+        box.innerHTML = lesson.link ? `${lesson.text}<br>${lesson.instructor}` : lesson.text;
+        col.appendChild(box);
+      });
+      return col;
+    }
+
+    const fixedDays = document.getElementById("fixed-days");
+    for (let i = 16; i <= 30; i++) {
+      fixedDays.appendChild(createDayColumn(`6/${i} (${"日月火水木金土"[i % 7]})`));
+    }
+    fixedDays.appendChild(createDayColumn("7/1 (月)"));
+    fixedDays.appendChild(createDayColumn("7/2 (火)"));
+    fixedDays.appendChild(createDayColumn("7/3 (水)"));
+    fixedDays.appendChild(createDayColumn("7/4 (木)"));
+
+    const dynamicDays = document.getElementById("dynamic-days");
+    for (let i = 5; i <= 11; i++) {
+      if (i === 10) {
+        dynamicDays.appendChild(createDayColumn("7/10 (水)", [
+          { text: "18:00 FEEL HIGH", instructor: "S.Kaori & Yoshifumi", link: true },
+          { text: "19:30 BB2 Rock2", instructor: "S.Kaori & Yoshifumi", link: true },
+          { text: "20:00 BB2 SUMMER2", instructor: "S.Kaori & Yoshifumi", link: true }
+        ]));
+      } else {
+        dynamicDays.appendChild(createDayColumn(`7/${i} (${"金土日月火水木"[i - 5]})`));
+      }
+    }
+
+    let lastTrigger = null;
+    setInterval(() => {
+      const now = new Date();
+      const min = now.getMinutes();
+      const sec = now.getSeconds();
+      countdown.textContent = `${String(min).padStart(2, '0')}:${String(sec).padStart(2, '0')}`;
+
+      if (min % 3 === 0 && sec === 0 && lastTrigger !== min) {
+        dynamic.style.display = "flex";
+        lastTrigger = min;
+        setTimeout(() => {
+          dynamic.style.display = "none";
+        }, 2 * 60 * 1000 + 1000);
+      }
+    }, 1000);
   </script>
 </body>
 </html>
