--- a/index.html
+++ b/index.html
@@ -53,19 +53,17 @@
     .lesson-box {
       padding: 6px;
       margin: 6px;
+      border-radius: 4px;
+      font-size: 0.75em;
+      color: #000;
+      text-align: center;
       background-color: #f9f9f9;
       border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 0.8em;
-      color: #aaa;
-      text-align: center;
     }
-    .highlight {
-      background-color: #fff;
-      border-left: 6px solid #f60;
-      color: #000;
-      cursor: pointer;
-    }
+    .lesson-orange { background-color: #ffa500; color: black; }
+    .lesson-yellow { background-color: #ffff99; color: black; }
+    .lesson-blue { background-color: #00bfff; color: white; }
+    .highlight { border-left: 6px solid #f60; cursor: pointer; font-weight: bold; }
     #countdown {
       text-align: center;
       margin: 10px;
@@ -161,6 +159,15 @@
       return "日月火水木金土"[date.getDay()];
     }
 
+    const samples = [
+      { text: "08:45 - 09:30 BB1 Comp 1", instructor: "S.Risa", cls: "lesson-yellow" },
+      { text: "10:00 - 10:45 BB2 10s 4", instructor: "Shunsuke", cls: "lesson-orange" },
+      { text: "11:15 - 12:00 BB2 10s 4", instructor: "Shunsuke", cls: "lesson-orange" },
+      { text: "12:30 - 13:15 BB1 House 1", instructor: "Ryo", cls: "lesson-yellow" },
+      { text: "15:00 - 15:45 BB1 10s 2", instructor: "Hiromu", cls: "lesson-yellow" },
+      { text: "16:15 - 17:00 BSB Rock 1", instructor: "Hiromu", cls: "lesson-blue" }
+    ];
+
     const fixedDays = document.getElementById("fixed-days");
     for (let i = 0; i <= 18; i++) {
       const date = new Date(2024, 5, 16 + i);
@@ -169,19 +176,22 @@
       const weekday = getWeekday(`${date.getFullYear()}-${mm}-${dd}`);
       const label = `${mm}/${dd} (${weekday})`;
 
-      fixedDays.appendChild(createDayColumn(label, [
-        { text: "08:00 BB2 10s 4", instructor: "Shunsuke" },
-        { text: "10:30 BB1 House 2", instructor: "S.Risa" }
-      ]));
+      const colLessons = [];
+      for (let j = 0; j < 6; j++) {
+        const sample = samples[Math.floor(Math.random() * samples.length)];
+        colLessons.push({ text: sample.text, instructor: sample.instructor, cls: sample.cls });
+      }
+      const col = createDayColumn(label, colLessons);
+      fixedDays.appendChild(col);
     }
 
     const dynamicDays = document.getElementById("dynamic-days");
     for (let i = 5; i <= 11; i++) {
       if (i === 10) {
         dynamicDays.appendChild(createDayColumn("7/10 (水)", [
-          { text: "18:00 FEEL HIGH", instructor: "S.Kaori & Yoshifumi", link: true },
-          { text: "19:30 BB2 Rock2", instructor: "S.Kaori & Yoshifumi", link: true },
-          { text: "20:00 BB2 SUMMER2", instructor: "S.Kaori & Yoshifumi", link: true }
+          { text: "18:00 - 19:00 FEEL HIGH", instructor: "S.Kaori", link: true, cls: "lesson-blue" },
+          { text: "19:30 - 20:15 BB2 Rock2", instructor: "Yoshifumi & S.Kaori", link: true, cls: "lesson-orange" },
+          { text: "20:30 - 21:15 BB2 SUMMER2", instructor: "Yoshifumi", link: true, cls: "lesson-orange" }
         ]));
       } else {
         dynamicDays.appendChild(createDayColumn(`7/${i} (${"金土日月火水木"[i - 5]})`));
@@ -215,11 +225,11 @@
 
       lessons.forEach(lesson => {
         const box = document.createElement("div");
-        box.className = lesson.link ? "lesson-box highlight" : "lesson-box";
+        box.className = `lesson-box ${lesson.cls || ''} ${lesson.link ? 'highlight' : ''}`.trim();
         if (lesson.link) {
           box.onclick = () => openModal();
         }
-        box.innerHTML = lesson.link ? `${lesson.text}<br>${lesson.instructor}` : lesson.text;
+        box.innerHTML = `${lesson.text}<br>${lesson.instructor}`;
         col.appendChild(box);
       });
       return col;
